[package]
name = "ant_colony"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2" }
enum-ordinalize = "4.3.0"
kdtree = "0.7.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
